@@ -44,8 +44,9 @@ WriteMakefile(
 	      NAME      => 'Parallel::Forker',
 	      AUTHOR	=> 'Wilson Snyder <wsnyder@wsnyder.org>',
 	      ABSTRACT  => 'Parallel job forking and management, with expression based control',
-	      PREREQ_PM => {'Time::HiRes' => 0,
-			    'Proc::ProcessTable' => 0.40,
+	      PREREQ_PM => {'Proc::ProcessTable' => 0.40,
+			    'Scalar::Util' => 0,
+			    'Time::HiRes' => 0,
 			},
 	      'dist'    => {COMPRESS => 'gzip -9f',
 			    SUFFIX   => '.gz',
